# ShopWhisper

./: .dockerignore  .gitignore  README.md  deploy-dev.sh  deploy-prod.sh  docker-compose.dev.yml
ShopWhisper/backend/: .dockerignore  .env.example  Dockerfile  __init__.py  pyproject.toml  reset_db.py
ShopWhisper/backend/api/: content_filter.py  main.py  middleware.py  security.py
ShopWhisper/backend/core/: __init__.py  config.py  resilience.py  security.py
ShopWhisper/backend/db/: __init__.py  redis.py  rls.py  session.py
ShopWhisper/backend/models/: __init__.py  addon_credit.py  admin.py  after_sale.py  base.py  conversation.py  follow_up.py  generation.py  knowledge.py  knowledge_candidate.py  knowledge_settings.py  notification.py  outreach.py  payment.py  platform.py  product.py  qa_pair.py  recommendation.py  sensitive_word.py  tenant.py  webhook.py
ShopWhisper/backend/schemas/: analytics.py  base.py  billing.py  content_template.py  follow_up.py  generation.py  knowledge.py  knowledge_candidate.py  knowledge_version.py  order.py  outreach.py  payment.py  pricing.py  product.py  product_prompt.py  prompt_template.py  recommendation.py  tenant.py
ShopWhisper/backend/scripts/: wait-for-services.sh
ShopWhisper/backend/services/: __init__.py  admin_service.py  alert_service.py  alipay_client.py  audit_service.py  billing_service.py  content_filter_service.py  conversation_chain_service.py  conversation_service.py  dialog_graph_service.py  embedding_service.py  invoice_service.py  knowledge_extraction_service.py  llm_service.py  memory_service.py  (+19 more)
(+374 files in other folders)
